@@ -1,11 +1,13 @@
-AUX fix-Makefile-0.6.5.patch 377 SHA256 e96f13b11f1e05042542dd9bbf507954634b23674e15ea76a97503d484fee7c0 SHA512 13282a291239425aa4de8186dc0db2f8e06c3c1441b71042b3885ff9621ce2f7391e06f08463e671a134022bda74fbe8c836625eb3f8dd38c54b875810afab2f WHIRLPOOL 9d926bef63fc66f08d0b0235116540d6ba8d8a4d071b4305227090e90cf4a5ae58cf720f1c5a93680f391fc8cc818fe72e2c12f19ae004fd7a18df788c64c4ea
 AUX fix-Makefile-0.7.1.patch 377 SHA256 10fa5bfbf9d61de4f07d0f117a0d2e2498f97b7a23a04f37e0a0bcfdf87c69c1 SHA512 c25175937b18a153f63990d37fb3161aa55428df3f7f3d9e1bc22836c055511cee649a998239c9765adbc1273ba8059ac2b1b1e2b3c4d016d762ccb78834a5bf WHIRLPOOL 85ecc6518b540a8cee0189e67c0cf3b67ca1943e4ed3433ea6827fe37fda11d1ac741b142d7d43ccc2afe5d4b85b6a02b9c603c21bc4df1b107e4a411cafc898
 AUX fix-Makefile-0.7.4.patch 397 SHA256 99b860adbb10866a9c9891c567d322c61a521e37b4e8f0861414aa03a09e459d SHA512 497c1102aeb348629b79245de421eca2284e96ea29f0037bda13933a2519c43bdf40baa0d2ef7833fac7638b6b8f8159623ee87b2d8ec9369f250ade549f92af WHIRLPOOL fe2f63c8a7560b43811419ca5f56a7f633fd88c78a7c5266c13b08a58364fdd015296dd15ea1dd90da9a38126fb9a3a54e585f3c8dcd6ecbf0e2f1bc29c2191f
+AUX fix-Makefile-0.7.6.patch 397 SHA256 e38d2418507d2b76013523a1e527163560101089b377760b220648cc60527c92 SHA512 11681e6dfaf674beb7fa3a5cabec56f835f63173dceab188ef5fb0a33e82b5af8fc7bf90f009f036358f13e56be4979937433614f21ad4316ea58382ad99a980 WHIRLPOOL bf394735aad3bb331aafc98b97be4553b1fdff190bf6ac90af88541ed152b4b8f767baab4f2ad5fc5bb47301c5ce15654e658c8bb1efe8eac108ceae52b8eb31
 AUX gitlab-workhorse.conf 248 SHA256 6d11d63aa869cfd8c6f77c3a875984c226db633be899ad7ce97fafe94236eee7 SHA512 234213c8361702bdfeea40bd306b5899de19f34ce985e090a86e01aa601cf4ed23da4dfb75f74fe5986bbea5535a7a6a745406b4f67f79d352bd1c863777c7f1 WHIRLPOOL 8ac1134cde3aee942466d206e703ebd5330f83537d7e29641447f812d857bcc57b07fbf82eab086c0d622750694f64fabf8ffca2ba26a725f61b40fd1941e963
 AUX gitlab-workhorse.init 653 SHA256 f38c37ed818cb8c25fb800bfcb5448f659e876b78ea33ea7a1ba3c80e73ea95e SHA512 2667997def39e6dc17e6a1d9be06d6e855d5d3e956e64d93bb3e74bbad0a1d427dc034f9c139f3b05e2666abab014404b2c8013c5347f4ec25fbf5ef86e7e88e WHIRLPOOL 63cd7ff80d88676b44c2d6ccdadf74907d5f8e4268f03ee11775c423bf95955f9d3aaeedd79fa6e0486b2d225336eb2ffa165dd7b9ac87ed0c2d403dc7e5afb4
 DIST gitlab-workhorse-0.7.1.tar.bz2 26792 SHA256 3f00a7813d84a86980d739fad30e527257ff186fd0e3df069d42760b6b056ae7 SHA512 7d9a02a37a6e4612c07a7ced022151a19d783e902fa21bd1a401066101ff07e61ed281217bf01bd7f51ae5cd329eea212ebff1c01d30e80d52d4a8b71bb94eb3 WHIRLPOOL edf291bbf981b58543169c839b449e92b95ecfda0be127429c6490981380e00e1cefc0a0684dc38dbe9f573e93e37f51f0d4b5385418b10af16a5a12c77f9b80
 DIST gitlab-workhorse-0.7.4.tar.bz2 27353 SHA256 61f0b4e6a786ce24101283f14d863d58b9b0703897b8967dd81b571a0dde54ca SHA512 f00b92ed25956f5af1db1c58c0ea8bdd9a36744d258dbdbaedf2f6c9ddd1b0a552667c20f2265ffd0f95c1abf73644743d39829f123a41466b1270c208f88684 WHIRLPOOL 5f3aab30d4acbc70604cb08c3b26d865d055441384de25c1d03e9d69633d8ee0be57169784422a17e2603efb0aeb1d1c9afc1a67aa10e834e7d53db444db496b
+DIST gitlab-workhorse-0.7.6.tar.bz2 27970 SHA256 a00e6db3de8a48bc8ac44e609bf994e81fbcdf9226ea77d5ea5700e89a1deaf1 SHA512 a269110823602ae0e92bfcbfb391f7999144caeb35ae62a32f5ec896b04a7e9d791a8baba21c06784acec4d1f074ba3ec99a79a2eab14b664196e6b72d7132be WHIRLPOOL c8b5716df1ce525927c5a56492a1eab7a2a7776c3541f4ac50e3621fc5332d3278b08c5cfde54c9ae05e6a32ec355de44c63f16861e4e7921685ced483eebcdc
 EBUILD gitlab-workhorse-0.7.1.ebuild 854 SHA256 c9e78983856490f7b638453356da30d6396f96ea3960f990e9cbb5dbef249eef SHA512 3c490abda76ed861ac7c126a656b91c4dac72f70ac99688865ec8a90a5aabb34f6d767899445510b9bbbc4edd30ba6b756668bb8d7c529dc000ba7fd570801e1 WHIRLPOOL e03f624cb7eceb56d45e638f772b935086bda3c21ec9e7e804aaf2449a2f6546da6d3143fe8499343b0fa7dc489a9413f1720a757d09e0803d8105af34116151
 EBUILD gitlab-workhorse-0.7.4.ebuild 918 SHA256 e7466db698fae0bc0aa112fe9698bc94a862f07575df0dfbd098c9125382d058 SHA512 48757189f18c1c6cbeb5ede420cce8adc4fbb807cf8f1c06e937dfca212fee1dc7bc20cf52d6ecf58bd872f2d7c0e821f0e41fd4ad042c0e857221a9265959d2 WHIRLPOOL 26a76aa4900e4a231b52c6ff3230ebcb72fba697fc13ccff893c5fda66bc2b75f7f87a391eb6cf6e15bb8b0bb1079917c34f9ea90667c2b3ae421d59a74327ce
+EBUILD gitlab-workhorse-0.7.6.ebuild 918 SHA256 42a55a2b0604345c1314a1a4333c507db888ad4e456ad4a908514e320658e58a SHA512 14f5a80e5d9effef0cdbb226b1536b75d9a37472c012703c35d38dc0a54fecdca5cf04b56574220327a7f87fcb6875d65757442f17e6f47d26aa8a1d876aa8d9 WHIRLPOOL 07ef711760eb4aed11d60a893074c816dd201ab0ad731bcbba9e914460983a9b17f775e6bce11f6bb0f6a5dfdb384f7a70ecabe0fcf00700b10842d14d81f7fc
 MISC ChangeLog 82 SHA256 12ed3543adc88564630b15553233b47b2bf04f4acc8f97eeb5c5befa2c16c75b SHA512 bf31a0cd9c7f4c2b560ef6cd2174e927933d1004c8fab2089e1d0d8c8d76f26f449f9babd33b72176038868259296cd4dda9db0b9cb175274e98fff888290703 WHIRLPOOL f7606de1e805cc293c25b9538e2fd7433ed4cd076bf7e047d7583e4e3886de1a365fe6b1e75bbcbd80f8d4da4a74ec3259d9914462a80ac75e9537dca5c9e52f
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
