@@ -1,12 +1,12 @@
 diff --git a/Makefile b/Makefile
-index c81222f..1a90927 100644
+index 9b3146d..b3c0630 100644
 --- a/Makefile
 +++ b/Makefile
 @@ -1,5 +1,5 @@
 -PREFIX=/usr/local
 -VERSION=$(shell git describe)-$(shell date -u +%Y%m%d.%H%M%S)
 +PREFIX=${DESTDIR}/usr
-+VERSION=0.6.5-$(shell date -u +%Y%m%d.%H%M%S)
++VERSION=v0.7.6-$(shell date -u +%Y%m%d.%H%M%S)
+ export GOPATH=$(shell pwd)/_build
  GOBUILD=go build -ldflags "-X main.Version=${VERSION}"
- 
- all: gitlab-zip-cat gitlab-zip-metadata gitlab-workhorse
+ PKG=gitlab.com/gitlab-org/gitlab-workhorse
