@@ -1,0 +1,39 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Id$
+
+EAPI="5"
+
+inherit eutils user
+
+DESCRIPTION="This is the new backend for Git-over-HTTP communication needed for GitLab >= 8.4"
+HOMEPAGE="https://gitlab.com/gitlab-org/gitlab-workhorse"
+SRC_URI="https://gitlab.com/gitlab-org/${PN}/repository/archive.tar.bz2?ref=v${PV} -> ${P}.tar.bz2"
+S="${WORKDIR}/${PN}-v${PV}-988b04b63537e20a101a74b6b1a984e75f09eb22"
+RESTRICT="mirror"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64 ~x86 ~arm ~arm64"
+
+DEPEND=">=dev-lang/go-1.5.1"
+
+src_prepare() {
+	epatch "${FILESDIR}/fix-Makefile-${PV}.patch"
+}
+
+src_install() {
+	local dest=/usr/bin
+
+	diropts -m755
+	dodir ${dest}
+
+	exeinto ${dest}
+	for f in "${PN}" gitlab-zip-cat gitlab-zip-metadata ; do
+		doexe "${S}/${f}"
+	done
+
+	## RC script ##
+	newinitd "${FILESDIR}/${PN}.init" "${PN}"
+	newconfd "${FILESDIR}/${PN}.conf" "${PN}"
+}
