@@ -1,3 +1,8 @@
+*gitlab-workhorse-0.7.6 (18 Jun 2016)
+
+  18 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-workhorse-0.7.6.ebuild:
+  Added ebuild for dev-vcs/gitlab-workhorse-0.7.6 and deleted obsolete patch file
+
   07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
   Added ChangeLog
 
